# gumdrop

./: .gitignore  .rustfmt.toml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  com.github.regularhunter.Gumdrop.json  gumdrop.doap  meson.build  meson_options.txt  org.gnome.Gumdrop.json
.reuse/: dep5
build-aux/: checks.sh
data/: com.github.regularhunter.Gumdrop.desktop.in.in  com.github.regularhunter.Gumdrop.gschema.xml  com.github.regularhunter.Gumdrop.metainfo.xml.in.in  io.bassi.Amberol.appdata.xml.in.in  io.bassi.Amberol.metainfo.xml.in.in  meson.build  org.gnome.Gumdrop.gschema.xml  org.gnome.Gumdrop.metainfo.xml.in.in  org.gnome.Gumdrop.service.in
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  cs.po  da.po  fa.po  fi.po  he.po  ia.po  meson.build  ml.po  nl.po  pl.po  pt_BR.po  sk.po  sl.po  sr.po  tr.po  uk.po  zh_CN.po
src/: amberol.gresource.xml  application.rs  cover_picture.rs  gumdrop.gresource.xml  main.rs  marquee.rs  meson.build  playback_control.rs  playlist_view.rs  queue_row.rs  search.rs  song_cover.rs  song_details.rs  sort.rs  utils.rs  volume_control.rs  waveform_view.rs  window.rs
src/audio/: cover_cache.rs  gst_backend.rs  mpris_controller.rs  player.rs  queue.rs  song.rs  state.rs  waveform_generator.rs
src/gtk/: playback-control.ui  playlist-view.ui  queue-row.ui  song-cover.ui  song-details.ui  style-dark.css  style.css  volume-control.ui  window.ui
